sold my soul for data

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       function gtag() { dataLayer.push(arguments); }
       gtag('js', new Date());
 
-      gtag('config', 'G-QQLW1FTYNN');
+      gtag('config', 'G-WMY9BWJ9Y6');
     </script>
   </head>
   <body>
